--- a/templates/clickhouse.arm.template.yaml
+++ b/templates/clickhouse.arm.template.yaml
@@ -235,7 +235,7 @@ Parameters:
     Description: Tiered storage parameter.
     Type: String
   RootStackName:
-    Default: quickstart-clickhouse-cluster
+    Default: cfn-ps-clickhouse-cluster
     Description: Prefix name of the ClickHouse cluster.
     Type: String
   DeviceName:
@@ -346,7 +346,7 @@ Parameters:
     ConstraintDescription: Quick Start bucket name can include numbers, lowercase
       letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
       (-).
-    Default: aws-quickstart
+    Default: aws-ia-us-east-1
     Description: S3 bucket name for the Quick Start assets. This string can include
       numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start
       or end with a hyphen (-).
@@ -355,7 +355,7 @@ Parameters:
     AllowedPattern: ^[0-9a-zA-Z-/.]*$
     ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
       uppercase letters, hyphens (-), and forward slashes (/).
-    Default: quickstart-clickhouse-cluster/
+    Default: cfn-ps-clickhouse-cluster/
     Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
       can include numbers, lowercase letters, uppercase letters, hyphens (-), and
       forward slashes (/).
