Remove bastion host creation for China region

--- a/templates/clickhouse-arm-entrypoint-existing-vpc.template.yaml
+++ b/templates/clickhouse-arm-entrypoint-existing-vpc.template.yaml
@@ -498,11 +498,19 @@ Conditions:
   UsingSingleAZ: !Equals [!Ref SingleAvailableZone, '1az']
   IsX86: !Equals [!Ref Architecture, 'X86']
   IsArm: !Equals [!Ref Architecture, 'ARM']
-  IsChinaRegion: !Or 
-      - !Equals 
+  IsChinaRegion: !Or
+    - !Equals
+      - !Ref 'AWS::Region'
+      - cn-north-1
+    - !Equals
+      - !Ref 'AWS::Region'
+      - cn-northwest-1
+  IsNotChinaRegion: !Not
+    - !Or
+      - !Equals
         - !Ref 'AWS::Region'
         - cn-north-1
-      - !Equals 
+      - !Equals
         - !Ref 'AWS::Region'
         - cn-northwest-1
   2NodesCondition: !Equals [!Ref 'ClickHouseNodeCount', '2']
@@ -512,6 +520,7 @@ Conditions:
 Resources:
   BastionStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsNotChinaRegion
     Properties:
       TemplateURL: 
         Fn::Sub:
@@ -556,11 +565,11 @@ Resources:
         AccessCIDR: !Ref AccessCIDR
         VPCID: !Ref VPCID
         VPCCIDR: !Ref VPCCIDR
-        BastionSecurityGroupID: !GetAtt BastionStack.Outputs.BastionSecurityGroupID
+        BastionSecurityGroupID: !If [IsChinaRegion, 'no-sg', !GetAtt BastionStack.Outputs.BastionSecurityGroupID]
   ClickHouseSecret:
     Type: 'AWS::SecretsManager::Secret'
     Properties:
-      Name: !Join ['-',['ClickHouseSecret',!GetAtt BastionStack.Outputs.BastionSecurityGroupID]]
+      Name: !Join ['-',['ClickHouseSecret',!GetAtt SecurityGroupStack.Outputs.ClickHouseServerSecurityGroup]]
       Description: "This secret has a dynamically generated secret password."
       GenerateSecretString:
         SecretStringTemplate: '{}'
@@ -571,7 +580,7 @@ Resources:
       Tags:
         -
           Key: AppName
-          Value: !Join ['-',['ClickHouseSecret',!GetAtt BastionStack.Outputs.BastionSecurityGroupID]]
+          Value: !Join ['-',['ClickHouseSecret',!GetAtt SecurityGroupStack.Outputs.ClickHouseServerSecurityGroup]]
   ZookeeperClusterStack: 
     Type: AWS::CloudFormation::Stack
     Properties: 
@@ -586,8 +595,8 @@ Resources:
               - UsingDefaultBucket
               - !Sub '${QSS3BucketName}-${AWS::Region}'
               - !Ref QSS3BucketName
-      Parameters: 
-        RootStackName: !GetAtt BastionStack.Outputs.BastionSecurityGroupID
+      Parameters:
+        RootStackName: !GetAtt SecurityGroupStack.Outputs.ClickHouseServerSecurityGroup
         PrivateSubnetID1: !Ref PrivateSubnet1AID
         PrivateSubnetID2: !Ref PrivateSubnet2AID
         KeyPairName: !Ref KeyPairName
@@ -641,8 +650,8 @@ Resources:
               - UsingDefaultBucket
               - !Sub '${QSS3BucketName}-${AWS::Region}'
               - !Ref QSS3BucketName
-      Parameters: 
-        RootStackName: !GetAtt BastionStack.Outputs.BastionSecurityGroupID
+      Parameters:
+        RootStackName: !GetAtt SecurityGroupStack.Outputs.ClickHouseServerSecurityGroup
         PrivateSubnetID1: !Ref PrivateSubnet1AID
         PrivateSubnetID2: !If
           - UsingSingleAZ 
@@ -695,8 +704,8 @@ Resources:
               - UsingDefaultBucket
               - !Sub '${QSS3BucketName}-${AWS::Region}'
               - !Ref QSS3BucketName
-      Parameters: 
-        RootStackName: !GetAtt BastionStack.Outputs.BastionSecurityGroupID
+      Parameters:
+        RootStackName: !GetAtt SecurityGroupStack.Outputs.ClickHouseServerSecurityGroup
         PrivateSubnetID1: !Ref PrivateSubnet1AID
         PrivateSubnetID2: !If
           - UsingSingleAZ 
@@ -1060,12 +1069,6 @@ Resources:
         ZookeeperInstanceType: !Ref ZookeeperInstanceType
         AlarmEmail: !Ref AlarmEmail
 Outputs:
-  CloudWatchLogs:
-    Description: CloudWatch Logs GroupName. Your SSH logs will be stored here.
-    Value: !GetAtt BastionStack.Outputs.CloudWatchLogs
-  BastionEIP1:
-    Description: Elastic IP 1 for Bastion
-    Value: !GetAtt BastionStack.Outputs.EIP1
   NetworkLoadBalancer2Nodes:
     Condition: 2NodesCondition
     Description: Network Load Balancer with port 8123 in private subnet 1
